# TextBuffer

./: CMakeLists.txt  Patch.h  README  TextBuffer.cpp  TextBuffer.h  bufferUtils.cpp  bufferUtils.h  exampleUsage.cpp  main.cpp  stringutil.cpp  stringutil.h  testTextBuffer.cpp
